Fixed Width issue with mainPage cointent
1) Fixed issue with the mainPage div becoming too wide and causing a scrollbar.

--- a/css/global.css
+++ b/css/global.css
@@ -201,8 +201,8 @@ nav ul li a.nav-dropdown:active + ul, nav ul li a.nav-dropdown:focus + ul{
 /* Main Content page.*/
 #mainPage{
     float: left;
-    width: 100vw;
-
+    /*width: 100vw;*/
+    flex: 1;
     height: 100vh;
     /*padding-left: 5px;*/
     background: #013859;
@@ -219,4 +219,5 @@ nav ul li a.nav-dropdown:active + ul, nav ul li a.nav-dropdown:focus + ul{
 body{
     margin: 0;
     width: 100vw;
+    display: flex;
 }
